doc: get chat WebSocket connection token
